syntax = "proto3";

package admin.v1;

import "admin/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/admin/v1;v1";

service AdminService {
  rpc Login(LoginRequest) returns (LoginResponse) {
  }
  rpc CreateAdmin(CreateAdminRequest) returns (CreateAdminResponse) {
  }
  rpc GetAdmin(GetAdminRequest) returns (GetAdminResponse) {
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string type = 2; // Bearer
  int64 expires_at = 3;
}

message CreateAdminRequest {
  string username = 1;
  string password = 2;
  string role_id = 3;
}

message CreateAdminResponse {
  string id = 1;
}

message GetAdminRequest {
  string id = 1;
}

message Admin {
  string id = 1;
  string username = 2;
  string role_id = 3;
  int64 created_at = 4;
}

message GetAdminResponse {
  Admin admin = 1;
}
