syntax = "proto3";
package user.v1;
option go_package = "github.com/wyfcoding/financialtrading/go-api/user/v1;v1";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message User { string id = 1; string email = 2; string name = 3; string phone = 4; int64 created_at = 5; }
message GetUserRequest { string id = 1; }
message GetUserResponse { User user = 1; }
message UpdateUserRequest { string id = 1; string name = 2; string phone = 3; }
message UpdateUserResponse { bool success = 1; }
